Closed Bug 1313590 Opened 8 years ago Closed 8 years ago

Missing header in dom/base/PartialSHistory.cpp

Categories

(Core :: DOM: Core & HTML, defect)

48 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: farre, Assigned: farre)

References

Details

Attachments

(1 file)

Missing include of nsIWebNavigation.h
Assignee: nobody → afarre
Blocks: 1198381
Attachment #8805474 - Flags: review?(amarchesini) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/35b7ac956b89
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.