Bug 1313590 - Include nsIWebNavigation.h. r=baku

MozReview-Commit-ID: 3TW1Z6ZDPQa